# CG-Praticas

./: README.md
Aula1/: Aula1.cpp  Aula1.h  main.cpp
Aula10/: Aula10.cpp  Aula10.h  CMakeLists.txt  main.cpp
Aula11/: Aula11.cpp  Aula11.h  CMakeLists.txt  main.cpp
Aula2/: Aula2.cpp  Aula2.h  CMakeLists.txt  main.cpp
Aula3/: aula3.cpp  aula3.h  main.cpp
Aula4/: Aula4.cpp  Aula4.h  main.cpp
Aula5/: Aula5.cpp  Aula5.h  main.cpp
Aula6/: Aula6.cpp  Aula6.h  CMakeLists.txt  main.cpp
Aula7/: Aula7.cpp  Aula7.h  CMakeLists.txt
Aula8/: Aula8.cpp  Aula8.h  CMakeLists.txt  CMakePresets.json  catmull-rom.cpp
Aula9/: Aula9.cpp  Aula9.h  CMakeLists.txt  main.cpp
