# CMakeList.txt : CMake project for Aula7, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Aula7")

# Add source to this project's executable.
add_executable (Aula7 "Aula7.cpp" "Aula7.h")

# TODO: Add tests and install targets if needed.
